[package]
name = "wiiuse_remote_hack"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
server = ["wiiboard"]

[dependencies]
wiiboard = { git = "https://github.com/Masterchef365/WiiBoard.git", optional = true }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
anyhow = "1"
